--- a/package.json
+++ b/package.json
@@ -47,18 +47,17 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.14.1592",
-    "@nuxtjs/mdc": "npm:@nuxtjs/mdc-edge@0.11.2-28900083.b7dc03e",
+    "@nuxtjs/mdc": "^0.12.0",
     "@sqlite.org/sqlite-wasm": "3.47.2-build1",
     "better-sqlite3": "^11.7.0",
     "c12": "^2.0.1",
-    "chokidar": "^4.0.2",
-    "consola": "^3.2.3",
+    "chokidar": "^4.0.3",
+    "consola": "^3.3.3",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
     "fast-glob": "^3.3.2",
     "git-url-parse": "^16.0.0",
-    "jiti": "^2.4.1",
+    "jiti": "^2.4.2",
     "knitwork": "^1.2.0",
     "listhen": "^1.9.0",
     "mdast-util-to-hast": "^13.2.0",
@@ -74,10 +73,10 @@
     "ohash": "^1.1.4",
     "parse-git-config": "^3.0.0",
     "pathe": "^1.1.2",
-    "pkg-types": "^1.2.1",
+    "pkg-types": "^1.3.0",
     "remark-mdc": "latest",
     "scule": "^1.3.0",
-    "shiki": "^1.24.2",
+    "shiki": "^1.24.4",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "tar": "^7.4.3",
@@ -96,14 +95,15 @@
     "pg": "*"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241216.0",
+    "@cloudflare/workers-types": "^4.20241224.0",
     "@nuxt/content": "link:.",
-    "@nuxt/devtools": "^1.6.4",
-    "@nuxt/eslint-config": "^0.7.3",
+    "@nuxt/devtools": "^1.7.0",
+    "@nuxt/eslint-config": "^0.7.4",
+    "@nuxt/kit": "^3.15.0",
     "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.14.1592",
+    "@nuxt/schema": "^3.15.0",
     "@nuxt/test-utils": "^3.15.1",
-    "@release-it/conventional-changelog": "^9.0.3",
+    "@release-it/conventional-changelog": "^9.0.4",
     "@types/better-sqlite3": "^7.6.12",
     "@types/micromatch": "^4.0.9",
     "@types/minimatch": "^5.1.2",
@@ -114,17 +114,17 @@
     "eslint": "^9.17.0",
     "mdclint": "^0.0.2",
     "micromark-util-types": "^2.0.1",
-    "nuxt": "^3.14.1592",
-    "release-it": "^17.10.0",
+    "nuxt": "^3.15.0",
+    "release-it": "^17.11.0",
     "vitest": "^2.1.8",
-    "vue-tsc": "^2.1.10",
-    "wrangler": "^3.96.0"
+    "vue-tsc": "^2.2.0",
+    "wrangler": "^3.99.0"
   },
   "resolutions": {
     "@nuxt/content": "workspace:*",
     "unimport": "3.14.5"
   },
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@9.15.2",
   "unbuild": {
     "entries": [
       "./src/module",
