--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@nuxtjs/mdc": "^0.12.0",
+    "@shikijs/langs": "^1.25.1",
     "@sqlite.org/sqlite-wasm": "3.47.2-build1",
     "better-sqlite3": "^11.7.0",
     "c12": "^2.0.1",
@@ -76,7 +77,7 @@
     "pkg-types": "^1.3.0",
     "remark-mdc": "latest",
     "scule": "^1.3.0",
-    "shiki": "^1.24.4",
+    "shiki": "^1.25.1",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "tar": "^7.4.3",
