--- a/package.json
+++ b/package.json
@@ -44,19 +44,20 @@
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
+    "verify": "npm run dev:prepare && npm run lint && npm run test && npm run typecheck"
   },
   "dependencies": {
     "@nuxtjs/mdc": "^0.12.0",
-    "@shikijs/langs": "^1.25.1",
+    "@shikijs/langs": "^1.26.1",
     "@sqlite.org/sqlite-wasm": "3.47.2-build1",
-    "better-sqlite3": "^11.7.0",
+    "better-sqlite3": "^11.7.2",
     "c12": "^2.0.1",
     "chokidar": "^4.0.3",
     "consola": "^3.3.3",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
-    "fast-glob": "^3.3.2",
+    "fast-glob": "^3.3.3",
     "git-url-parse": "^16.0.0",
     "jiti": "^2.4.2",
     "knitwork": "^1.2.0",
@@ -73,11 +74,11 @@
     "nuxt-component-meta": "^0.9.0",
     "ohash": "^1.1.4",
     "parse-git-config": "^3.0.0",
-    "pathe": "^1.1.2",
+    "pathe": "^2.0.0",
     "pkg-types": "^1.3.0",
     "remark-mdc": "latest",
     "scule": "^1.3.0",
-    "shiki": "^1.25.1",
+    "shiki": "^1.26.1",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "tar": "^7.4.3",
@@ -96,27 +97,27 @@
     "pg": "*"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241224.0",
+    "@cloudflare/workers-types": "^4.20241230.0",
     "@nuxt/content": "link:.",
     "@nuxt/devtools": "^1.7.0",
     "@nuxt/eslint-config": "^0.7.4",
-    "@nuxt/kit": "^3.15.0",
+    "@nuxt/kit": "^3.15.1",
     "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.15.0",
+    "@nuxt/schema": "^3.15.1",
     "@nuxt/test-utils": "^3.15.1",
     "@release-it/conventional-changelog": "^9.0.4",
     "@types/better-sqlite3": "^7.6.12",
     "@types/micromatch": "^4.0.9",
     "@types/minimatch": "^5.1.2",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
     "@types/ws": "^8.5.13",
     "csvtojson": "^2.0.10",
     "eslint": "^9.17.0",
     "mdclint": "^0.0.2",
     "micromark-util-types": "^2.0.1",
-    "nuxt": "^3.15.0",
-    "release-it": "^17.11.0",
+    "nuxt": "^3.15.1",
+    "release-it": "^18.0.0",
     "vitest": "^2.1.8",
     "vue-tsc": "^2.2.0",
     "wrangler": "^3.99.0"
@@ -125,7 +126,7 @@
     "@nuxt/content": "workspace:*",
     "unimport": "3.14.5"
   },
-  "packageManager": "pnpm@9.15.2",
+  "packageManager": "pnpm@9.15.3",
   "unbuild": {
     "entries": [
       "./src/module",
