--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,7 @@
     "@iconify-json/vscode-icons": "^1.2.8",
     "@nuxt/content": "latest",
     "@nuxt/image": "^1.8.1",
-    "@nuxt/ui-pro": "3.0.0-alpha.10",
+    "@nuxt/ui-pro": "https://pkg.pr.new/@nuxt/ui-pro@7659616",
     "@nuxthub/core": "^0.8.10",
     "@nuxtjs/plausible": "^1.2.0",
     "@octokit/rest": "^21.0.2",
