--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - v3
+      - chore/full-app
   pull_request:
     branches:
       - main
       - v3
+      - chore/full-app
 
 jobs:
   ubuntu:
