--- a/docs/content/studio/pricing.yml
+++ b/docs/content/studio/pricing.yml
@@ -22,6 +22,7 @@ plans:
       label: Get started for free
       color: neutral
       to: ''
+    cycle: ''
   team:
     title: Team
     description: For developers, editors and clients who want to collaborate.
@@ -63,71 +64,119 @@ features:
   includes:
     projects:
       title: Projects
-      value: ['Unlimited', '1', Unlimited]
+      value:
+        - Unlimited
+        - '1'
+        - Unlimited
     members:
       title: Members
-      value: ['1', '2 included ($9 per extra)', Unlimited]
+      value:
+        - '1'
+        - 2 included ($9 per extra)
+        - Unlimited
     media:
       title: Media Library
-      plans: ['solo', 'team', 'unlimited']
+      plans:
+        - solo
+        - team
+        - unlimited
     support:
       title: Discord support
-      plans: ['solo', 'team', 'unlimited']
+      plans:
+        - solo
+        - team
+        - unlimited
     dedicated:
       title: Dedicated Discord channel
-      plans: ['team', 'unlimited']
+      plans:
+        - team
+        - unlimited
     roles:
-      title:  Roles and permissions
-      plans: ['team', 'unlimited']
+      title: Roles and permissions
+      plans:
+        - team
+        - unlimited
     collaboration:
       title: Live Collaboration
-      plans: ['team', 'unlimited']
+      plans:
+        - team
+        - unlimited
     sync:
       title: GitHub syncing
       includes:
         repositories:
           title: Repositories
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         workflow:
           title: Branches and Pull Requests
           plans: []
           soon: true
         files:
           title: Files
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         actions:
           title: Actions
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
     project:
       title: Project
       includes:
         clone:
           title: Clone a template
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         import:
           title: Import a repository
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
     editors:
       title: Editors
       includes:
         markdown:
           title: Markdown editor
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         json:
           title: JSON/YML form editor
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         appconfig:
           title: App config editor
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         drag:
           title: Drag'n drop
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
     preview:
       title: Live Preview
       includes:
         draft:
           title: Studio Draft
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         branches:
           title: Branches
           plans: []
@@ -141,20 +190,32 @@ features:
       includes:
         gh:
           title: GitHub Pages
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         self:
           title: Selft Hosted
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
     publish:
       title: Save changes
       includes:
         preview:
           title: Preview differences
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
         branch:
           title: Branch creation / merge
           plans: []
           soon: true
         commit:
           title: Commit
-          plans: ['solo', 'team', 'unlimited']
+          plans:
+            - solo
+            - team
+            - unlimited
