docs: fix typo in feature table
Update pricing.yml

--- a/docs/content/studio/pricing.yml
+++ b/docs/content/studio/pricing.yml
@@ -195,7 +195,7 @@ features:
             - team
             - unlimited
         self:
-          title: Selft Hosted
+          title: Self Hosted
           plans:
             - solo
             - team
