--- a/.github/ISSUE_TEMPLATE/bug-report-v2.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-v2.yml
@@ -1,6 +1,6 @@
-name: "\U0001F41E Bug Report"
-description: Create a report to help us improve Nuxt Content
-labels: ["pending triage"]
+name: "🐛 Bug report (v2)"
+description: Report a bug to help us improve the module (v2 only).
+labels: ["pending triage", "v2"]
 body:
   - type: markdown
     attributes:
@@ -12,7 +12,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Before reporting a bug, please make sure that you have read through our [documentation](https://content.nuxt.com/).
+        Before reporting a bug, please make sure that you have read through our [v2 documentation](https://v2.content.nuxt.com/).
   - type: textarea
     id: env
     attributes:
