--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "example": "run () { nuxi dev examples/$*; }; run",
     "docs": "nuxi dev docs",
     "docs:build": "nuxi build docs",
-    "dev": "nuxi dev playground",
+    "devtools": "nuxi dev src/devtools/client --port 3300",
+    "dev": "pnpm dev:prepare && nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && release-it",
@@ -49,6 +50,8 @@
     "verify": "npm run dev:prepare && npm run lint && npm run test && npm run typecheck"
   },
   "dependencies": {
+    "@nuxt/devtools-kit": "^1.7.0",
+    "@nuxt/devtools-ui-kit": "^1.7.0",
     "@nuxt/kit": "^3.15.2",
     "@nuxtjs/mdc": "^0.13.0",
     "@shikijs/langs": "^1.27.2",
@@ -81,6 +84,7 @@
     "remark-mdc": "latest",
     "scule": "^1.3.0",
     "shiki": "^1.27.2",
+    "sirv": "^3.0.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "tar": "^7.4.3",
