--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "@nuxtjs/mdc": "^0.13.2",
     "@shikijs/langs": "^2.1.0",
     "@sqlite.org/sqlite-wasm": "3.48.0-build4",
+    "@webcontainer/env": "^1.1.1",
     "better-sqlite3": "^11.8.1",
     "c12": "^2.0.1",
     "chokidar": "^4.0.3",
     "consola": "^3.4.0",
-    "db0": "^0.2.1",
+    "db0": "^0.2.3",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
     "fast-glob": "^3.3.3",
@@ -95,8 +96,20 @@
     "zod-to-ts": "^1.2.0"
   },
   "peerDependencies": {
+    "@electric-sql/pglite": "*",
     "@libsql/client": "*",
-    "@electric-sql/pglite": "*"
+    "sqlite3": "*"
+  },
+  "peerDependenciesMeta": {
+    "@electric-sql/pglite": {
+      "optional": true
+    },
+    "@libsql/client": {
+      "optional": true
+    },
+    "sqlite3": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250124.3",
@@ -109,10 +122,10 @@
     "@nuxt/test-utils": "^3.15.4",
     "@release-it/conventional-changelog": "^10.0.0",
     "@types/better-sqlite3": "^7.6.12",
-    "@types/bun": "^1.2.0",
+    "@types/bun": "^1.2.1",
     "@types/micromatch": "^4.0.9",
     "@types/minimatch": "^5.1.2",
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.12.0",
     "@types/pg": "^8.11.11",
     "@types/ws": "^8.5.14",
     "csvtojson": "^2.0.10",
@@ -124,7 +137,7 @@
     "typescript": "5.7.3",
     "vitest": "^3.0.4",
     "vue-tsc": "^2.2.0",
-    "wrangler": "^3.105.1"
+    "wrangler": "^3.106.0"
   },
   "resolutions": {
     "@nuxt/content": "workspace:*"
