--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - run: corepack enable
+      - run: npm i -g --force corepack && corepack enable
       - run: pnpm install
       - run: pnpm dev:prepare
       - run: pnpm lint
