--- a/package.json
+++ b/package.json
@@ -140,7 +140,8 @@
     "wrangler": "^3.108.1"
   },
   "resolutions": {
-    "@nuxt/content": "workspace:*"
+    "@nuxt/content": "workspace:*",
+    "@nuxt/eslint-config": "1.0.1"
   },
   "packageManager": "pnpm@9.15.4",
   "unbuild": {
