--- a/package.json
+++ b/package.json
@@ -141,7 +141,8 @@
   },
   "resolutions": {
     "@nuxt/content": "workspace:*",
-    "@nuxt/eslint-config": "1.0.1"
+    "@nuxt/eslint-config": "1.0.1",
+    "@nuxt/devtools-kit": "1.7.0"
   },
   "packageManager": "pnpm@9.15.4",
   "unbuild": {
