--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,7 @@
     "joi": "^17.13.3",
     "minisearch": "^7.1.1",
     "nuxt": "3.15.4",
+    "nuxt-llms": "https://pkg.pr.new/nuxtlabs/nuxt-llms@510c02f",
     "nuxt-og-image": "^4.1.2",
     "prettier": "^3.4.2",
     "shiki-transformer-color-highlight": "^0.2.0",
