--- a/docs/package.json
+++ b/docs/package.json
@@ -16,7 +16,7 @@
     "joi": "^17.13.3",
     "minisearch": "^7.1.2",
     "nuxt": "3.15.4",
-    "nuxt-llms": "https://pkg.pr.new/nuxtlabs/nuxt-llms@60fbed3",
+    "nuxt-llms": "^0.1.0",
     "nuxt-og-image": "^4.1.4",
     "prettier": "^3.5.1",
     "shiki-transformer-color-highlight": "^0.2.0",
