--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.15.4",
-    "@nuxtjs/mdc": "npm:@nuxtjs/mdc-edge@0.13.6-29008400.6c6a036",
+    "@nuxtjs/mdc": "^0.14.0",
     "@shikijs/langs": "^3.0.0",
     "@sqlite.org/sqlite-wasm": "3.49.0-build3",
     "@webcontainer/env": "^1.1.1",
