--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@nuxt/content": "next",
-    "nuxt": "latest",
+    "nuxt": "^3.16.0",
     "vue": "latest",
     "vue-router": "latest"
   }
