--- a/package.json
+++ b/package.json
@@ -140,10 +140,7 @@
     "wrangler": "^4.0.0"
   },
   "resolutions": {
-    "@nuxt/content": "workspace:*",
-    "@nuxt/eslint-config": "^1.1.0",
-    "@nuxt/devtools-kit": "1.7.0",
-    "vite": "6.1.1"
+    "@nuxt/content": "workspace:*"
   },
   "packageManager": "pnpm@9.15.6",
   "unbuild": {
