--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,7 @@
     "@iconify-json/vscode-icons": "^1.2.16",
     "@nuxt/content": "latest",
     "@nuxt/image": "^1.9.0",
-    "@nuxt/ui-pro": "3.0.0-beta.3",
+    "@nuxt/ui-pro": "^3.0.0",
     "@nuxthub/core": "^0.8.18",
     "@nuxtjs/plausible": "^1.2.0",
     "@octokit/rest": "^21.1.1",
