--- a/playground/package.json
+++ b/playground/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "latest",
-    "@nuxt/ui-pro": "3.0.0-alpha.13",
+    "@nuxt/ui-pro": "^3.0.0",
     "@nuxthub/core": "^0.8.18",
     "nuxt": "^3.16.0",
     "remark-code-import": "latest",
