--- a/examples/ui-pro/package.json
+++ b/examples/ui-pro/package.json
@@ -9,10 +9,8 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@nuxt/ui-pro": "next",
-    "@nuxt/content": "next",
-    "nuxt": "^3.16.0",
-    "vue": "latest",
-    "vue-router": "latest"
+    "@nuxt/ui-pro": "^3.0.0",
+    "@nuxt/content": "^3.3.0",
+    "nuxt": "^3.16.0"
   }
 }
