--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
     "@iconify-json/lucide": "^1.2.29",
     "@iconify-json/simple-icons": "^1.2.28",
     "@iconify-json/vscode-icons": "^1.2.16",
-    "@nuxt/content": "latest",
+    "@nuxt/content": "^3.3.0",
     "@nuxt/image": "^1.9.0",
     "@nuxt/ui-pro": "^3.0.0",
     "@nuxthub/core": "^0.8.18",
