--- a/playground/package.json
+++ b/playground/package.json
@@ -9,7 +9,7 @@
     "dev:prepare": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^3.3.0",
+    "@nuxt/content": "latest",
     "@nuxt/ui-pro": "^3.0.0",
     "@nuxthub/core": "^0.8.18",
     "nuxt": "^3.16.0",
