--- a/examples/ui-pro/package.json
+++ b/examples/ui-pro/package.json
@@ -9,8 +9,8 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
+    "@nuxt/content": "latest",
     "@nuxt/ui-pro": "^3.0.0",
-    "@nuxt/content": "^3.3.0",
     "nuxt": "^3.16.0"
   }
 }
