--- a/docs/package.json
+++ b/docs/package.json
@@ -3,12 +3,12 @@
   "name": "@nuxt/content-docs",
   "type": "module",
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.29",
+    "@iconify-json/lucide": "^1.2.30",
     "@iconify-json/simple-icons": "^1.2.28",
     "@iconify-json/vscode-icons": "^1.2.16",
     "@nuxt/content": "latest",
     "@nuxt/image": "^1.9.0",
-    "@nuxt/ui-pro": "3.0.0-beta.3",
+    "@nuxt/ui-pro": "^3.0.0",
     "@nuxthub/core": "^0.8.18",
     "@nuxtjs/plausible": "^1.2.0",
     "@octokit/rest": "^21.1.1",
@@ -17,7 +17,7 @@
     "minisearch": "^7.1.2",
     "nuxt": "^3.16.0",
     "nuxt-llms": "^0.1.0",
-    "nuxt-og-image": "^5.0.2",
+    "nuxt-og-image": "^5.0.4",
     "prettier": "^3.5.3",
     "shiki-transformer-color-highlight": "^1.0.0",
     "ufo": "^1.5.4",
