--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -9,9 +9,7 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@nuxt/content": "next",
-    "nuxt": "^3.16.0",
-    "vue": "latest",
-    "vue-router": "latest"
+    "@nuxt/content": "latest",
+    "nuxt": "^3.16.0"
   }
 }
