--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -10,7 +10,7 @@
     "dev:prepare": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.0.0-alpha.1",
+    "@nuxt/content": "latest",
     "nuxt": "^3.16.0"
   }
 }
