--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "ohash": "^1.1.4",
     "pathe": "^2.0.3",
     "pkg-types": "^2.1.0",
-    "remark-mdc": "latest",
+    "remark-mdc": "^3.5.3",
     "scule": "^1.3.0",
     "shiki": "^3.2.1",
     "slugify": "^1.6.6",
@@ -114,7 +114,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250313.0",
     "@nuxt/content": "link:.",
-    "@nuxt/devtools": "^2.2.1",
+    "@nuxt/devtools": "^2.3.0",
     "@nuxt/eslint-config": "^1.2.0",
     "@nuxt/kit": "^3.16.0",
     "@nuxt/module-builder": "^0.8.4",
@@ -140,10 +140,7 @@
     "wrangler": "^4.0.0"
   },
   "resolutions": {
-    "@nuxt/content": "workspace:*",
-    "@nuxt/eslint-config": "^1.1.0",
-    "@nuxt/devtools-kit": "1.7.0",
-    "vite": "6.1.1"
+    "@nuxt/content": "workspace:*"
   },
   "packageManager": "pnpm@9.15.6",
   "unbuild": {
