--- a/docs/package.json
+++ b/docs/package.json
@@ -13,16 +13,12 @@
     "@nuxtjs/plausible": "^1.2.0",
     "@octokit/rest": "^21.1.1",
     "@vueuse/nuxt": "^13.0.0",
-    "joi": "^17.13.3",
     "minisearch": "^7.1.2",
     "nuxt": "^3.16.0",
     "nuxt-llms": "^0.1.0",
     "nuxt-og-image": "^5.0.4",
     "prettier": "^3.5.3",
     "shiki-transformer-color-highlight": "^1.0.0",
-    "ufo": "^1.5.4",
-    "valibot": "^0.42.1",
-    "yup": "^1.6.1",
-    "zod": "^3.24.2"
+    "ufo": "^1.5.4"
   }
 }
