--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.16.0",
-    "@nuxtjs/mdc": "https://pkg.pr.new/@nuxtjs/mdc@a185c02",
+    "@nuxtjs/mdc": "^0.16.0",
     "@shikijs/langs": "^3.2.1",
     "@sqlite.org/sqlite-wasm": "3.49.1-build2",
     "@webcontainer/env": "^1.1.1",
