chore: update meta for package

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "keywords": [
     "nuxt",
     "content",
-    "module"
+    "nuxt-module",
+    "cms",
+    "markdown",
+    "mdc"
   ],
   "repository": {
     "type": "git",
