chore: upgrade component meta

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.16.2",
-    "@nuxtjs/mdc": "https://pkg.pr.new/@nuxtjs/mdc@fc8c294",
+    "@nuxtjs/mdc": "0.17.0",
     "@shikijs/langs": "^3.3.0",
     "@sqlite.org/sqlite-wasm": "3.49.1-build4",
     "@webcontainer/env": "^1.1.1",
@@ -79,11 +79,11 @@
     "micromark-util-sanitize-uri": "^2.0.1",
     "micromatch": "^4.0.8",
     "minimatch": "^10.0.1",
-    "nuxt-component-meta": "^0.10.1",
+    "nuxt-component-meta": "^0.11.0",
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
     "pkg-types": "^2.1.0",
-    "remark-mdc": "^3.5.3",
+    "remark-mdc": "^3.6.0",
     "scule": "^1.3.0",
     "shiki": "^3.3.0",
     "slugify": "^1.6.6",
