--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "@shikijs/langs": "^3.3.0",
     "@sqlite.org/sqlite-wasm": "3.49.1-build4",
     "@webcontainer/env": "^1.1.1",
-    "better-sqlite3": "^11.9.1",
     "c12": "^3.0.3",
     "chokidar": "^4.0.3",
     "consola": "^3.4.2",
@@ -101,7 +100,8 @@
   "peerDependencies": {
     "@electric-sql/pglite": "*",
     "@libsql/client": "*",
-    "sqlite3": "*"
+    "sqlite3": "*",
+    "better-sqlite3": "11.x"
   },
   "peerDependenciesMeta": {
     "@electric-sql/pglite": {
@@ -111,6 +111,9 @@
       "optional": true
     },
     "sqlite3": {
+      "optional": true
+    },
+    "better-sqlite3": {
       "optional": true
     }
   },
