--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "micromatch": "^4.0.8",
     "minimatch": "^10.0.1",
     "nuxt-component-meta": "^0.11.0",
+    "nypm": "^0.6.0",
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
     "pkg-types": "^2.1.0",
