docs: init with docus

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "prepack": "nuxt-module-build build",
     "typecheck": "nuxi typecheck",
     "example": "run () { nuxi dev examples/$*; }; run",
-    "docs": "nuxi dev docs",
-    "docs:build": "nuxi build docs",
+    "docs": "docus dev docus",
+    "docs:build": "docus build docus",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
