--- a/docus/package.json
+++ b/docus/package.json
@@ -5,7 +5,7 @@
     "build": "docus build"
   },
   "dependencies": {
-    "docus": "latest",
+    "docus": "3.1.0-20250619-105902-65a477a",
     "better-sqlite3": "^11.10.0",
     "nuxt": "^3.17.3"
   }
