--- a/docus/package.json
+++ b/docus/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@vueuse/nuxt": "^13.3.0",
+    "@nuxt/content": "link:..",
     "better-sqlite3": "^11.10.0",
     "docus": "3.1.0-20250619-105902-65a477a",
     "nuxt": "^3.17.3"
