--- a/docs/package.json
+++ b/docs/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@vueuse/nuxt": "^13.3.0",
     "@nuxt/content": "link:..",
+    "@nuxtjs/plausible": "^1.2.0",
     "better-sqlite3": "^11.10.0",
     "docus": "3.1.0-20250619-105902-65a477a",
     "nuxt": "^3.17.3"
