--- a/package.json
+++ b/package.json
@@ -101,14 +101,14 @@
     "unist-util-stringify-position": "^4.0.0",
     "unist-util-visit": "^5.0.0",
     "ws": "^8.18.3",
-    "zod": "^3.25.75",
-    "zod-to-json-schema": "^3.24.6"
+    "zod": "^3.25.76 || ^4.0.10"
   },
   "peerDependencies": {
     "@electric-sql/pglite": "*",
     "@libsql/client": "*",
     "better-sqlite3": "^12.2.0",
-    "sqlite3": "*"
+    "sqlite3": "*",
+    "zod": "^3.25.76 || ^4.0.10"
   },
   "peerDependenciesMeta": {
     "@electric-sql/pglite": {
@@ -121,6 +121,9 @@
       "optional": true
     },
     "better-sqlite3": {
+      "optional": true
+    },
+    "zod": {
       "optional": true
     }
   },
@@ -137,7 +140,6 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/bun": "^1.2.19",
     "@types/micromatch": "^4.0.9",
-    "@types/minimatch": "^6.0.0",
     "@types/node": "^24.0.15",
     "@types/pg": "^8.15.4",
     "@types/ws": "^8.18.1",
