--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
   ],
   "scripts": {
     "prepack": "nuxt-module-build build",
-    "typecheck": "nuxi typecheck",
-    "example": "run () { nuxi dev examples/$*; }; run",
-    "docs": "docus dev docs",
-    "docs:build": "docus build docs",
-    "dev": "nuxi dev playground",
-    "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "typecheck": "nuxt typecheck",
+    "example": "run () { nuxt dev examples/$*; }; run",
+    "docs": "nuxt dev docs",
+    "docs:build": "nuxt build docs",
+    "dev": "nuxt dev playground",
+    "dev:build": "nuxt build playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs --extends docus",
     "release": "npm run lint && npm run test && npm run prepack && release-it",
     "lint": "eslint .",
     "test": "vitest run",
