--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "prepack": "nuxt-module-build build",
     "typecheck": "nuxi typecheck",
     "example": "run () { nuxi dev examples/$*; }; run",
-    "docs": "nuxt dev --extend docus",
-    "docs:build": "nuxt build --extend docus",
+    "docs": "nuxt dev --extend docus docs",
+    "docs:build": "nuxt build --extend docus docs",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
