--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "verify": "npm run dev:prepare && npm run lint && npm run test && npm run typecheck"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.17.6",
+    "@nuxt/kit": "^3.18.1",
     "@nuxtjs/mdc": "^0.17.2",
     "@shikijs/langs": "^3.9.2",
     "@sqlite.org/sqlite-wasm": "3.50.3-build1",
@@ -84,7 +84,7 @@
     "micromatch": "^4.0.8",
     "minimark": "^0.2.0",
     "minimatch": "^10.0.3",
-    "nuxt-component-meta": "^0.13.0",
+    "nuxt-component-meta": "^0.13.1",
     "nypm": "^0.6.1",
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
@@ -128,13 +128,13 @@
     }
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250805.0",
-    "@nuxt/content": "link:.",
+    "@cloudflare/workers-types": "^4.20250806.0",
+    "@nuxt/content": "workspace:*",
     "@nuxt/devtools": "^2.6.2",
     "@nuxt/eslint-config": "^1.7.1",
     "@nuxt/kit": "^3.17.6",
     "@nuxt/module-builder": "^1.0.2",
-    "@nuxt/schema": "^3.17.6",
+    "@nuxt/schema": "^3.18.1",
     "@nuxt/test-utils": "^3.19.2",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/better-sqlite3": "^7.6.13",
@@ -148,12 +148,12 @@
     "happy-dom": "^18.0.1",
     "mdclint": "^0.0.3",
     "micromark-util-types": "^2.0.2",
-    "nuxt": "^3.17.6",
+    "nuxt": "^3.18.1",
     "release-it": "^19.0.4",
     "typescript": "5.9.2",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.0.5",
-    "wrangler": "^4.27.0"
+    "wrangler": "^4.28.0"
   },
   "resolutions": {
     "@nuxt/content": "workspace:*"
