--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
   ],
   "scripts": {
     "prepack": "nuxt-module-build build",
-    "typecheck": "nuxi typecheck",
-    "example": "run () { nuxi dev examples/$*; }; run",
+    "typecheck": "nuxt typecheck",
+    "example": "run () { nuxt dev examples/$*; }; run",
     "docs": "nuxt dev -e docus docs",
     "docs:build": "nuxt-module-build build && nuxt build -e docus docs",
-    "dev": "nuxi dev playground",
-    "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "dev": "nuxt dev playground",
+    "dev:build": "nuxt build playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs -e docus",
     "release": "npm run lint && npm run test && npm run prepack && release-it",
     "lint": "eslint .",
     "test": "vitest run",
