--- a/playground/package.json
+++ b/playground/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "generate": "nuxi generate",
-    "dev:prepare": "nuxt prepare"
+    "dev:prepare": "nuxt prepare",
+    "typecheck": "nuxt typecheck"
   },
   "devDependencies": {
     "@nuxt/content": "latest",
