--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "verify": "npm run dev:prepare && npm run lint && npm run test && npm run typecheck"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.18.1",
+    "@nuxt/kit": "^4.0.3",
     "@nuxtjs/mdc": "^0.17.2",
     "@shikijs/langs": "^3.9.2",
     "@sqlite.org/sqlite-wasm": "3.50.3-build1",
@@ -85,7 +85,7 @@
     "micromatch": "^4.0.8",
     "minimark": "^0.2.0",
     "minimatch": "^10.0.3",
-    "nuxt-component-meta": "^0.13.1",
+    "nuxt-component-meta": "^0.13.0",
     "nypm": "^0.6.1",
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
@@ -102,7 +102,7 @@
     "unist-util-stringify-position": "^4.0.0",
     "unist-util-visit": "^5.0.0",
     "ws": "^8.18.3",
-    "zod": "^4.0.17"
+    "zod": "^4.1.3"
   },
   "peerDependencies": {
     "@electric-sql/pglite": "*",
@@ -129,13 +129,13 @@
     }
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250806.0",
-    "@nuxt/content": "workspace:*",
+    "@cloudflare/workers-types": "^4.20250805.0",
+    "@nuxt/content": "link:.",
     "@nuxt/devtools": "^2.6.2",
     "@nuxt/eslint-config": "^1.7.1",
     "@nuxt/kit": "^4.0.3",
     "@nuxt/module-builder": "^1.0.2",
-    "@nuxt/schema": "^3.18.1",
+    "@nuxt/schema": "^4.0.3",
     "@nuxt/test-utils": "^3.19.2",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/better-sqlite3": "^7.6.13",
@@ -149,7 +149,7 @@
     "happy-dom": "^18.0.1",
     "mdclint": "^0.0.3",
     "micromark-util-types": "^2.0.2",
-    "nuxt": "^3.18.1",
+    "nuxt": "^4.0.3",
     "release-it": "^19.0.4",
     "typescript": "5.9.2",
     "vitest": "^3.2.4",
