--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "tar": "^7.4.3",
     "tinyglobby": "^0.2.14",
     "ufo": "^1.6.1",
+    "unctx": "^2.4.1",
     "unified": "^11.0.5",
     "unist-util-stringify-position": "^4.0.0",
     "unist-util-visit": "^5.0.0",
@@ -109,12 +110,12 @@
   "peerDependencies": {
     "@electric-sql/pglite": "*",
     "@libsql/client": "*",
+    "@valibot/to-json-schema": "^1.0.0",
     "better-sqlite3": "^12.2.0",
     "sqlite3": "*",
-    "zod": "*",
-    "zod-to-json-schema": "*",
     "valibot": "^1.0.0",
-    "@valibot/to-json-schema": "^1.0.0"
+    "zod": "*",
+    "zod-to-json-schema": "*"
   },
   "peerDependenciesMeta": {
     "@electric-sql/pglite": {
