--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
         with:
-          node-version: '20'
+          package-manager-cache: false
+          node-version: '24'
       - run: npm i -g --force corepack && corepack enable
       - run: pnpm install
       - run: pnpm dev:prepare
