--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,6 +4,7 @@ packages:
   - docs
   - examples/*
   - test/fixtures/*
+
 onlyBuiltDependencies:
   - '@parcel/watcher'
   - '@tailwindcss/oxide'
@@ -14,3 +15,6 @@ onlyBuiltDependencies:
   - unrs-resolver
   - vue-demi
   - workerd
+
+patchedDependencies:
+  '@nuxthub/core': patches/@nuxthub__core.patch
