--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "@nuxt/content": "link:..",
-    "@nuxthub/core": "0.9.0",
+    "@nuxthub/core": "https://pkg.pr.new/@nuxthub/core@3d374d9",
     "@nuxtjs/plausible": "^2.0.1",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.2.0",
