--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -9,7 +9,7 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@nuxt/content": "latest",
+    "@ripka/content": "latest",
     "nuxt": "^4.1.1"
   }
 }
