--- a/playground/package.json
+++ b/playground/package.json
@@ -9,7 +9,7 @@
     "dev:prepare": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "latest",
+    "@ripka/content": "latest",
     "@nuxt/ui-pro": "^3.3.3",
     "@nuxthub/core": "^0.9.0",
     "nuxt": "^4.1.1",
