Revert "feat: prepare to publish as @ripka/content"
This reverts commit 148101db3b673bdce47ec6f763d55da989d07b0a.

--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -9,7 +9,7 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@ripka/content": "latest",
+    "@nuxt/content": "latest",
     "nuxt": "^4.1.1"
   }
 }
