--- a/examples/ui-pro/package.json
+++ b/examples/ui-pro/package.json
@@ -9,7 +9,7 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@ripka/content": "latest",
+    "@nuxt/content": "latest",
     "@nuxt/ui-pro": "^3.3.3",
     "nuxt": "^4.1.1"
   }
