chore: remove ui pro occurences

--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "prepack": "nuxt-module-build build",
     "typecheck": "nuxt typecheck",
     "example": "run () { nuxt dev examples/$*; }; run",
-    "docs": "nuxt dev -e docus docs",
-    "docs:build": "nuxt-module-build build && nuxt build -e docus docs",
+    "docs": "nuxt dev docs",
+    "docs:build": "nuxt-module-build build && nuxt build docs",
     "dev": "nuxt dev playground",
     "dev:build": "nuxt build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs -e docus",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs",
     "release": "npm run lint && npm run test && npm run prepack && release-it",
     "lint": "eslint .",
     "test": "vitest run",
