--- a/docs/package.json
+++ b/docs/package.json
@@ -1,17 +1,18 @@
 {
   "name": "docus-starter",
   "scripts": {
-    "dev": "nuxt dev -e docus",
-    "build": "nuxt build -e docus"
+    "dev": "nuxt dev",
+    "build": "nuxt build"
   },
   "dependencies": {
     "@nuxt/content": "link:..",
     "@nuxthub/core": "https://pkg.pr.new/@nuxthub/core@3d374d9",
     "@nuxtjs/plausible": "^2.0.1",
     "@vueuse/nuxt": "^13.9.0",
-    "better-sqlite3": "^12.2.0",
-    "docus": "4.1.3",
-    "minisearch": "^7.1.2",
+    "better-sqlite3": "^12.4.1",
+    "docus": "5.1.0",
+    "minisearch": "^7.2.0",
+    "@nuxt/ui": "^4.0.0",
     "nuxt": "^4.1.2"
   }
 }
