--- a/playground/package.json
+++ b/playground/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "latest",
-    "@nuxt/ui-pro": "^3.3.3",
+    "@nuxt/ui": "^4.0.0",
     "@nuxthub/core": "^0.9.0",
     "nuxt": "^4.1.2",
     "remark-code-import": "^1.2.0",
